--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,14 +2,14 @@
     <li>
         <article class="post">
             <div class="title">
-                <a href="{{post_url}}" target="_blank">{{title}}</a>
-                <span>({{post_url}})</span>
+                {{!-- <a href="" target="_blank">{{}}</a> --}}
+                <span>({{machine_id}})</span>
             </div>
             <div class="meta">
-                {{vote_count}} point(s) by {{user.username}} on
-                {{created_at}}
+                {{id}} point(s) by {{first_name}} on
+                {{last_name}}
                 |
-                <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
+                {{!-- <a href="/post/{{id}}">{{comments.length}} comment(s)</a> --}}
             </div>
         </article>
     </li>
